# src/main/resources/swagger/exactabank-openapi.yaml
@@ -151,7 +151,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ResponseError'
 
-
   /transactions:
     get:
       tags:
@@ -195,23 +194,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseError'
-  /transactions/saldo:
+
+  /transactions/balance:
     get:
       tags:
         - Transactions
-      summary: Get Saldo
-      description: Method to get a user's transactions.
-      operationId: getSaldo
-      parameters:
-        - name: initial-date
-          in: query
-          description: "Initial date for filtering transactions (format: dd/MM/yyyy)"
-          required: false
-          schema:
-            type: string
-            pattern: "^(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/([0-9]{4})$"
-            example: "10/10/2024"
-
+      summary: Get Balance
+      description: Method to get a user's Balance.
+      operationId: getBalance
       responses:
         200:
           description: OK
